<resources>
    <string name="app_name">Delivery</string>
    <string name="login">Log In</string>
    <string name="delivery">Delivery</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="add_phone_num">Add Phone Number</string>
    <string name="enter_phone_num">Enter Phone Number</string>
    <string name="phone">Phone Number</string>
    <string name="register_driver">Register New Driver</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="logout">Log Out</string>
    <string name="package_list">Package List</string>
    <string name="package_name">Package Name</string>
    <string name="delivered">Mark As Delivered</string>
    <string name="location">Location</string>
    <string name="register">register</string>
    <string name="update_profile_picture">Update Profile Picture</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="register_as_manager">Register As Manager</string>
    <string name="create_vendor">Create Vendor</string>
    <string name="vendors">Vendors</string>
    <string name="building_sites">Building Sites</string>
    <string name="drivers">Drivers</string>
    <string name="driver">Driver</string>
    <string name="create_building_site">Create Building Site</string>
    <string name="enter_vendor_name">Enter Vendor Name</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="deliver">Delivered</string>
    <string name="modify">Modify</string>
    <string name="enter_address">Enter Address</string>
    <string name="create_package">Create New Package</string>
    <string name="packages">Packages</string>
</resources>