<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CreatePackageActivity">

    <include layout="@layout/nav_bar" />

    <ImageView
        android:layout_width="155dp"
        android:layout_height="145dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginSize"
        android:src="@mipmap/logo_icon" />

    <com.example.delivery.views.InputView
        android:id="@+id/create_package"
        android:layout_width="match_parent"
        android:layout_height="@dimen/inputHeight"
        android:layout_marginTop="@dimen/marginSize"
        app:input_hint="@string/enter_name"
        app:input_icon="@mipmap/identity_icon"
        app:is_password="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/marginSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/building_sites" />

        <org.angmarch.views.NiceSpinner
            android:id="@+id/site_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/marginSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vendors" />

        <org.angmarch.views.NiceSpinner
            android:id="@+id/vendor_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/marginSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver" />

        <org.angmarch.views.NiceSpinner
            android:id="@+id/driver_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <Button
        style="@style/btn"
        android:layout_marginTop="@dimen/marginSize"
        android:onClick="onCreatePackageClick"
        android:text="@string/create" />

</LinearLayout>